// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ToolErrorBlock renders a tool error with the error header 1`] = `
"<div>
  <div data-testid="tool-error" class="border border-red/40">
    <div class="px-4 py-2 font-mono text-xs uppercase tracking-widest text-red">
      Tool error
    </div>
    <pre class="whitespace-pre-wrap wrap-break-word bg-gunmetal px-4 py-3 font-mono text-xs text-cream">
      File not found: /projects/app/NOTES
Did you mean one of these?
- notes.txt
    </pre>
  </div>
</div>"
`;

exports[`ToolErrorBlock renders a crash with the crashed header 1`] = `
"<div>
  <div data-testid="tool-error" class="border border-red/40">
    <div class="px-4 py-2 font-mono text-xs uppercase tracking-widest text-red">
      Tool crashed
    </div>
    <pre class="whitespace-pre-wrap wrap-break-word bg-gunmetal px-4 py-3 font-mono text-xs text-cream">
      they played us like a damn fiddle!
    </pre>
  </div>
</div>"
`;

exports[`ReadToolCall renders the path with basename emphasized 1`] = `
"<div>
  <div data-testid="read-tool-call" class="flex items-baseline gap-3 px-4 py-2">
    <span class="font-mono text-xs uppercase tracking-widest text-steel">
      read
    </span>
    <span class="font-mono text-sm">
      <span class="text-steel">
        /projects/app/src/
      </span>
      <span class="text-cream">
        notes.txt
      </span>
    </span>
  </div>
</div>"
`;

exports[`ReadToolCall renders an offset/limit range suffix 1`] = `
"<div>
  <div data-testid="read-tool-call" class="flex items-baseline gap-3 px-4 py-2">
    <span class="font-mono text-xs uppercase tracking-widest text-steel">
      read
    </span>
    <span class="font-mono text-sm">
      <span class="text-steel">
        /a/
      </span>
      <span class="text-cream">
        b.txt
      </span>
      <span class="text-steel">
        :100-299
      </span>
    </span>
  </div>
</div>"
`;

exports[`ReadToolCall renders offset-only input without a range suffix 1`] = `
"<div>
  <div data-testid="read-tool-call" class="flex items-baseline gap-3 px-4 py-2">
    <span class="font-mono text-xs uppercase tracking-widest text-steel">
      read
    </span>
    <span class="font-mono text-sm">
      <span class="text-steel">
        /a/
      </span>
      <span class="text-cream">
        b.txt
      </span>
    </span>
  </div>
</div>"
`;

exports[`ReadToolResult renders ToolErrorBlock on error 1`] = `
"<div>
  <div data-testid="tool-error" class="border border-red/40">
    <div class="px-4 py-2 font-mono text-xs uppercase tracking-widest text-red">
      Tool error
    </div>
    <pre class="whitespace-pre-wrap wrap-break-word bg-gunmetal px-4 py-3 font-mono text-xs text-cream">
      File not found: /projects/app/NOTES
Did you mean one of these?
- notes.txt
    </pre>
  </div>
</div>"
`;
